home page design

--- a/src/index.css
+++ b/src/index.css
@@ -10,30 +10,30 @@ body {
 
 @layer base {
   :root {
-    --background: 0 0% 100%;
-    --foreground: 222.2 84% 4.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 222.2 84% 4.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 222.2 84% 4.9%;
-    --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 210 40% 98%;
-    --secondary: 210 40% 96.1%;
-    --secondary-foreground: 222.2 47.4% 11.2%;
-    --muted: 210 40% 96.1%;
-    --muted-foreground: 215.4 16.3% 46.9%;
-    --accent: 210 40% 96.1%;
-    --accent-foreground: 222.2 47.4% 11.2%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 210 40% 98%;
-    --border: 214.3 31.8% 91.4%;
-    --input: 214.3 31.8% 91.4%;
-    --ring: 222.2 84% 4.9%;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --background: #FFFFFF;
+    --foreground: #070D16;
+    --card: #FFFFFF;
+    --card-foreground: #070D16;
+    --popover: #FFFFFF;
+    --popover-foreground: #070D16;
+    --primary: #eb7617;
+    --primary-foreground: #d86d15;
+    --secondary: #ff7300;
+    --secondary-foreground: #d4a8178a;
+    --muted: #f5f2f2;
+    --muted-foreground: #6a6a6a;
+    --accent: #e7b616a8;
+    --accent-foreground: #e1b626;
+    --destructive: #F44A4A;
+    --destructive-foreground: #FAFAFA;
+    --border: #E0E4E8;
+    --input: #E0E4E8;
+    --ring: #070D16;
+    --chart-1: #F26C4F;
+    --chart-2: #2C8D8F;
+    --chart-3: #315672;
+    --chart-4: #F6D365;
+    --chart-5: #F8C96D;
     --radius: 0.5rem;
     --sidebar-background: 0 0% 98%;
     --sidebar-foreground: 240 5.3% 26.1%;
