--- a/src/index.css
+++ b/src/index.css
@@ -167,11 +167,21 @@ body {
     --ring: #ff8f00; /* Bright orange */
 
     /* Chart Colors */
-    --chart-1: #ff7043; /* Orange */
-    --chart-2: #ffc107; /* Yellow */
-    --chart-3: #f4511e; /* Deep orange */
-    --chart-4: #ffb300; /* Golden yellow */
-    --chart-5: #e64a19; /* Dark red-orange */
+    /* --chart-1: #ff7043;  Orange 
+    --chart-2: #ffc107;  Yellow 
+    --chart-3: #f4511e;  Deep orange 
+    --chart-4: #ffb300;  Golden yellow 
+    --chart-5: #e64a19;  Dark red-orange */
+
+    
+      --chart-1: 12 76% 61%;
+      --chart-2: 173 58% 39%;
+      --chart-3: 197 37% 24%;
+      --chart-4: 43 74% 66%;
+      --chart-5: 27 87% 67%; 
+        --color-desktop: #2563eb;
+        --color-mobile: #60a5fa;
+        --color-iPad: #FF6F00;
 
     /* Sidebar Colors */
     --sidebar-background: #3e2723;
